更改文字內容

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">支援版本</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">地圖</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -55,32 +55,32 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">支援版本</h2>
-                    <h3 class="section-subheading text-muted">目前支援iOS和Android、Switch</h3>f
+                    <h3 class="section-subheading text-muted">目前支援iOS和Android、Switch</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <i class=""><img src="assets/img/logos/ios.png" height="126" width="126"/></i>
+<!--                            圖片標誌出處:https://technews.tw/2020/07/15/apple-silicon-rhapsody/-->
                         </span>
                         <h4 class="my-3">ios</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">蘋果公司為其行動裝置所開發的專有行動作業系統</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            <i class=""><img src="assets/img/logos/android.png" height="126" width="126"/></i>
+<!--                            圖片標誌出處:https://t-news.com.tw/2020/07/11/android-11-update-plan-google-trying-to-accelerate-ota-speed/-->
                         </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Android</h4>
+                        <p class="text-muted">基於Linux核心與其他開源軟體的開放原始碼行動作業系統</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <i class=""><img src="assets/img/logos/switch.png" height="126" width="126"/></i>
+<!--                            圖片標誌出處:https://www.nintendo.tw/topics/article/a_190117_01.html-->
                         </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Switch</h4>
+                        <p class="text-muted">日本任天堂公司出品的電子遊戲機</p>
                     </div>
                 </div>
             </div>
@@ -89,8 +89,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">地圖</h2>
+                    <h3 class="section-subheading text-muted">遊戲內主要遊玩的6張地圖，分別為晨島、雲野、雨林、墓土、霞谷、禁閣</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -103,8 +103,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">晨島</div>
+                                <div class="portfolio-caption-subheading text-muted">Isle of Dawn</div>
                             </div>
                         </div>
                     </div>
@@ -118,8 +118,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">雲野</div>
+                                <div class="portfolio-caption-subheading text-muted">Daylight Prairie</div>
                             </div>
                         </div>
                     </div>
@@ -133,8 +133,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">雨林</div>
+                                <div class="portfolio-caption-subheading text-muted">Hidden Forest</div>
                             </div>
                         </div>
                     </div>
@@ -148,8 +148,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-heading">霞谷</div>
+                                <div class="portfolio-caption-subheading text-muted">Valley of Triumph</div>
                             </div>
                         </div>
                     </div>
@@ -163,8 +163,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading">墓土</div>
+                                <div class="portfolio-caption-subheading text-muted">Golden Wasteland</div>
                             </div>
                         </div>
                     </div>
@@ -178,8 +178,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-heading">禁閣</div>
+                                <div class="portfolio-caption-subheading text-muted">Vault of Knowledge</div>
                             </div>
                         </div>
                     </div>
