--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                                 <div class="portfolio-hover">
+<!--                                    圖片皆為遊戲內自行拍攝-->
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
@@ -105,6 +106,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">晨島</div>
                                 <div class="portfolio-caption-subheading text-muted">Isle of Dawn</div>
+<!--                                英文來源:https://www.dcard.tw/f/sky/p/234859690-->
                             </div>
                         </div>
                     </div>
@@ -120,6 +122,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">雲野</div>
                                 <div class="portfolio-caption-subheading text-muted">Daylight Prairie</div>
+<!--                                英文來源:https://www.dcard.tw/f/sky/p/234859690-->
                             </div>
                         </div>
                     </div>
@@ -135,6 +138,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">雨林</div>
                                 <div class="portfolio-caption-subheading text-muted">Hidden Forest</div>
+<!--                                英文來源:https://www.dcard.tw/f/sky/p/234859690-->
                             </div>
                         </div>
                     </div>
@@ -150,6 +154,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">霞谷</div>
                                 <div class="portfolio-caption-subheading text-muted">Valley of Triumph</div>
+<!--                                英文來源:https://www.dcard.tw/f/sky/p/234859690-->
                             </div>
                         </div>
                     </div>
@@ -165,6 +170,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">墓土</div>
                                 <div class="portfolio-caption-subheading text-muted">Golden Wasteland</div>
+<!--                                英文來源:https://www.dcard.tw/f/sky/p/234859690-->
                             </div>
                         </div>
                     </div>
@@ -180,6 +186,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">禁閣</div>
                                 <div class="portfolio-caption-subheading text-muted">Vault of Knowledge</div>
+<!--                                英文來源:https://www.dcard.tw/f/sky/p/234859690-->
                             </div>
                         </div>
                     </div>
@@ -403,23 +410,16 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">晨島</h2>
+                                    <p class="item-intro text-muted">Isle of Dawn</p>
+<!--                                    英文來源:https://www.dcard.tw/f/sky/p/234859690-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Threads
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Illustration
-                                        </li>
-                                    </ul>
+                                    <p>天空王國中的第一個場景，是每位“光之後裔”誕生的地方，也是這場逐光旅途的啓程地。這裏有着神秘的山洞、暖粉色沙海、微泛的晨光，石壁上刻着的壁畫訴説着王國的故事。初到的旅人們將在晨島獲取屬於自己的斗篷、學會飛行；也將在此首次學會收集先祖的記憶，跟隨先祖學習解鎖新的動作</p>
+<!--                                    文字來源:https://baike.baidu.hk/item/%E5%85%89%C2%B7%E9%81%87/23699529#4-->
+                                    <ul class="list-inline"></ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
-                                        Close Project
+                                        關閉介面
                                     </button>
                                 </div>
                             </div>
