新增聯絡畫面圖片及更改遊戲內容文字

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">版本</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">地圖</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">關於</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">內容</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">系統</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">聯絡</a></li>
                     </ul>
                 </div>
             </div>
@@ -204,6 +204,7 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+<!--                        圖片皆為遊戲內自行拍攝-->
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>世界觀</h4>
@@ -218,23 +219,23 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>遊戲玩法</h4>
-                                <h4 class="subheading">Gameplay</h4>
+                                <h4>角色設定</h4>
+                                <h4 class="subheading">The role of setting</h4>
 <!--                                英文源自google翻譯-->
                             </div>
-                            <div class="timeline-body"><p class="text-muted">本遊戲分為七個地圖（章節），即遇境（初始地圖）、晨島、雲野、雨林、霞谷、暮土、禁閣、暴風眼（分為兩部分），大地圖中還有一些小地圖乃至隱藏地圖。玩家將操控一個光明之子在其中探險，收集先祖的動作，逐漸揭開天空王國沒落的真相，最後將在暴風眼用光之翼拯救旅人，得到救贖並重生。</p></div>
-<!--                            文字來源:https://zh.wikipedia.org/wiki/Sky%E5%85%89%C2%B7%E9%81%87-->
+                            <div class="timeline-body"><p class="text-muted">許多年前，在雲端之上，有着一個宏大的光之國度，國度的子民由“母親”創造，子民們在“先祖”們的幫助下，一天天的壯大着自己的王國。然而好景不長，王國內部動盪，一場內戰過後，昔日的王國煙消雲散。在目睹了這場戰爭後，“母親”創造了“光之後裔”，賦予他先祖的力量，而“光之後裔”們，也踏上追尋先祖的旅途。作為“光之後裔”，玩家們將要在旅途中，尋找先祖留下的信息，領略王國昔日的輝煌。隨着旅途的進行，玩家也將逐步獲得力量。</p></div>
+<!--                            文字來源:https://baike.baidu.hk/item/%E5%85%89%C2%B7%E9%81%87/23699529#2_1-->
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>奇妙之旅（季節）</h4>
-                                <h4 class="subheading">Wonderful Journey (Season)</h4>
+                                <h4>遊戲玩法</h4>
+                                <h4 class="subheading">Gameplay</h4>
 <!--                                英文源自google翻譯-->
                             </div>
-                            <div class="timeline-body"><p class="text-muted">光遇約每一個月就會迎來一個新的季節，每個季節持續時間為2～3個月。季節期間可以用季節蠟燭（黃蠟燭）與季節先祖兌換季節專屬物品。其中大部分物品需要購買月卡才可獲得。除了季節畢業禮，其他季節物品都將在季節結束後都可以返場形式用普通蠟燭購買，也就是常說的與復刻先祖兌換。</p></div>
+                            <div class="timeline-body"><p class="text-muted">本遊戲分為七個地圖（章節），即遇境（初始地圖）、晨島、雲野、雨林、霞谷、暮土、禁閣、暴風眼（分為兩部分），大地圖中還有一些小地圖乃至隱藏地圖。玩家將操控一個光明之子在其中探險，收集先祖的動作，逐漸揭開天空王國沒落的真相，最後將在暴風眼用光之翼拯救旅人，得到救贖並重生。</p></div>
 <!--                            文字來源:https://zh.moegirl.org.cn/zh-tw/Sky%E5%85%89%C2%B7%E9%81%87-->
                         </div>
                     </li>
@@ -306,31 +307,12 @@
                 </div>
             </div>
         </section>
-        <!-- Clients-->
-        <div class="py-5">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/microsoft.svg" alt="..." /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/google.svg" alt="..." /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/facebook.svg" alt="..." /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." /></a>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">與我們聯絡</h2>
+                    <h3 class="section-subheading text-muted">謝謝您的意見與回饋</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
@@ -385,27 +367,10 @@
                     <!-- an error submitting the form-->
                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                     <!-- Submit Button-->
-                    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
+                    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">傳送訊息</button></div>
                 </form>
             </div>
         </section>
-        <!-- Footer-->
-        <footer class="footer py-4">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2021</div>
-                    <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                    <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
-                    </div>
-                </div>
-            </div>
-        </footer>
         <!-- Portfolio Modals-->
         <!-- Portfolio item 1 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
