--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>Sky光．遇</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -267,45 +267,34 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">特色系統</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Parveen Anand</h4>
-                            <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <h4>任務系統</h4>
+                            <p class="text-muted">遊戲擁有“每日任務”，玩家可在境遇通往雲國各地的石門前的先祖處領取。這些任務有追光型、特殊型、多人型，以及尋找每日的冥想神壇並在神壇前進行祈禱等多種類型。</p>
+<!--                            文字來源:https://baike.baidu.hk/item/%E5%85%89%C2%B7%E9%81%87/23699529#2_1-->
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                            <h4>Diana Petersen</h4>
-                            <p class="text-muted">Lead Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <h4>社交機制</h4>
+                            <p class="text-muted">遊戲擁有獨特的“陌生人社交”機制，遊戲中的社交機制不再是單純滿足聊天、組隊等需求的功能系統，“社交”承載了遊戲的部分核心情感體驗。</p>
+<!--                            文字來源:https://baike.baidu.hk/item/%E5%85%89%C2%B7%E9%81%87/23699529#2_1-->
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>Larry Parker</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <h4>奇妙之旅（季節）</h4>
+                            <p class="text-muted">光遇約每一個月就會迎來一個新的季節，每個季節持續時間為2～3個月。季節期間可以用季節蠟燭（黃蠟燭）與季節先祖兌換季節專屬物品。</p>
+<!--                            文字來源:https://zh.moegirl.org.cn/zh-tw/Sky%E5%85%89%C2%B7%E9%81%87-->
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
-                </div>
-            </div>
         </section>
         <!-- Contact-->
         <section class="page-section" id="contact">
@@ -367,7 +356,7 @@
                     <!-- an error submitting the form-->
                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                     <!-- Submit Button-->
-                    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">傳送訊息</button></div>
+                    <div class="text-center"><a href="about.html"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">傳送訊息</button><a/></div>
                 </form>
             </div>
         </section>
