--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <title>Sky光．遇</title>
 </head>
 <body>
-這裡是傳送訊息的最終頁面:D!
+<img src="assets/img/IMG_3545.JPG" height="688" width="1520"/>
+<p Align=center>這裡是傳送訊息的最終頁面，感謝您的觀看●오●<p/>
 </body>
 </html>
