在圖片上新增文字

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             gtag('js', new Date());
 
             gtag('config', 'G-GP0Z2EJCYX');
+
+            <meta charSet="utf-8">
         </script>
     </head>
     <body id="page-top">
@@ -47,7 +49,9 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class=""><img src="assets/img/IMG_3786.JPG" height="888" width="1920"/>
+        <header <div class=""><img src="assets/img/IMG_3786.JPG" height="888" width="1920"/>
+                <div class="words"><font color="white">溫暖的靈魂終將相遇</font></div>
+            </div>
 <!--            此圖片為遊戲內自己的截圖-->
         </header>
         <!-- Services-->
